--- a/home.html
+++ b/home.html
@@ -292,7 +292,7 @@
 						</div>	
 					</div>
 				</div>
-				<div class="slider" title="Dont ever quit your dreams!"></div>
+				<div class="slider" title="Dream lofty dreams, and as you dream, so you shall become."></div>
 			</div>
 		</div>
 	</div>
