--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 		<div class="intro-text-mobile">
 			<p>Hey! Just a brief introduction &hearts;</p>
 			<p>"Don't let what you cannot do interfere with what you can do."</p>
-			<p>Everyone takes every step in a very unique way. Hello, My name is Hazel Joyce Baniqued. I attended Pangasinan State University in Lingayen, Pangasinan took up
+			<p>Everyone takes every step in a very unique way. Hello! My name is Hazel Joyce Baniqued. I attended Pangasinan State University in Lingayen, Pangasinan took up
 			Bachelor of Science and Information Technology. On<br>the other hand, my career vision is to become a journalist as well, in radio broadcast field.</p>
 			<p>Therefore, I comitted to working hard in school and looking opportunities that could help me make my goals reality.</p>	
 		</div>
