--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@
 						</div>
 						<div class="box">
 							<div class="icon-educ">
-								<a href="mailto:baniquedhazeljoyce37@gmail.com"><img src="images/icon2-educ.png">
+								<img src="images/icon2-educ.png">
 							</div>
 							<h5>Binmaley School of Fisheries</h5>
 							<p>General Academic Strand<br>
