--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 			<p>Hello,</p>
 			<p>I'm Hazel</p>
 			<p>I'm an IT Student.</p>
-			<button class="exp-btn"><a href="explore.html"><span>Explore<span></a></button> 
+			<button class="exp-btn"><a href="explore.html"><span>Subscribe<span></a></button> 
 		</div>
 		<img src="images/profile.png" class="profile" alt="profile">
 	</div>
